log_outputs/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-logs
          persistentVolumeClaim:
            claimName: shared-logs-claim
      containers:
        - name: string-reader
          image: levonml/1.11-reader:latest
          volumeMounts:
          - name: shared-logs
            mountPath: /tmp/kube
        - name: string-writer
          image: levonml/1.11-writer:latest
          volumeMounts:
          - name: shared-logs
            mountPath: /tmp/kube
