log_outputs/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-output-ingress
spec:
  rules:
  - http:
      paths:
      - path: /showlogs
        pathType: Prefix
        backend:
          service:
            name: log-output-svc
            port:
              number: 2345
      - path: /log-output
        pathType: Prefix
        backend:
          service:
            name: log-output-svc
            port:
              number: 2344
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: pong-o-svc
            port:
              number: 2346
      - path: /the-project
        pathType: Prefix
        backend:
          service:
            name: the-project-svc
            port:
              number: 2347
